# celshader

./: CMakeLists.txt
assets/models/bowser/: bowser.mtl  license.txt  scene.gltf
assets/models/legomodel/: model.mtl
assets/models/meteoritebase/: meteoritebase.mtl
assets/models/nintendo/: nintendo.mtl
assets/models/reticle/: reticle.mtl  reticlenew.mtl
assets/models/ship/: ship.mtl
assets/models/shiphitbox/: ShipHitBox.mtl
assets/models/skybox/: SkyBoxModel.mtl
assets/models/yoshi/: yoshi.mtl
include/: Camera.h  Def.h  Mesh.h  Model.h  Shader.h
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: Def.h  Level.h  Meteor.h  Meteorlevel.h  Shader.h  Ship.h  StarDwarves.vcxproj  StarDwarves.vcxproj.filters  main.cpp
src/shaders/: geometry.gs  hitbox.fs  main.fs  main.gs  main.vs  meteorite.fs  meteorite.vs  reticle.vs  ship.fs  ship.vs  skyBox.fs  skyBox.vs
